--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </div>
       </div>
 
-        <div style="padding-top:5px;padding-left:20px">
+        <div style="padding-top:5px;padding-left:20px;display:none">
               <select id="select-sample">
                 <option selected="selected" value="product.ts">Product</option>
                 <!-- <option value="raytracer.ts">Raytracer</option>
