--- a/doc.html
+++ b/doc.html
@@ -11,11 +11,11 @@
     <script src="/docson/js/markdown.js"></script>    
     <title>Typson playground</title>
     <style>
-        .prop
+        body { font-family: helvetica }
     </style>
 </head>
 <body>
-    <div id="doc"></div>
+    <div id="doc">loading...</div>
     <script>
         require.config({                        
                 baseUrl: "/typson"            
