Change template location

--- a/doc.html
+++ b/doc.html
@@ -17,6 +17,7 @@
 <body>
     <div id="doc">loading...</div>
     <script>
+        docson.templateBaseUrl="/docson/templates";
         require.config({                        
                 baseUrl: "/typson"            
         });
