--- a/doc.html
+++ b/doc.html
@@ -8,6 +8,7 @@
     <script src="/docson/js/handlebars.js"></script>
     <script src="/docson/js/highlight.js"></script>
     <script src="/docson/js/docson.js"></script> 
+    <script src="/docson/js/traverse.js"></script> 
     <title>Typson playground</title>
     <style>
         body { font-family: helvetica }
