--- a/doc.html
+++ b/doc.html
@@ -4,11 +4,11 @@
     <script src="/typson/lib/require.js"></script>
     <meta charset="utf-8">
     <link rel="stylesheet" href="/docson/css/docson.css">
-    <script src="/docson/js/jquery.js"></script>
-    <script src="/docson/js/handlebars.js"></script>
-    <script src="/docson/js/highlight.js"></script>
-    <script src="/docson/js/traverse.js"></script>
-    <script src="/docson/js/docson.js"></script> 
+    <script src="/docson/lib/jquery.js"></script>
+    <script src="/docson/lib/handlebars.js"></script>
+    <script src="/docson/lib/highlight.js"></script>
+    <script src="/docson/lib/traverse.js"></script>
+    <script src="/docson/docson.js"></script> 
     <title>Typson playground</title>
     <style>
         body { font-family: helvetica }
@@ -22,7 +22,7 @@
         require.config({                        
                 baseUrl: "/typson"                
         });
-        require(["../docson/js/jsonpointer", "../docson/js/marked"], function(jsonpointer, markedjs) {                   
+        require(["../docson/lib/jsonpointer", "../docson/lib/marked"], function(jsonpointer, markedjs) {                   
             marked = markedjs;
             require(["typson-schema"], function(schema) {
                 function receiveMessage(event)
