--- a/doc.html
+++ b/doc.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <script src="/typson/lib/require.js"></script>
+    <script src="/typson/vendor/require.js"></script>
     <meta charset="utf-8">
     <link rel="stylesheet" href="/docson/css/docson.css">
     <title>Typson playground</title>
@@ -18,7 +18,7 @@
             require(["docson"], function(docson) { 
                 require.config({ baseUrl: "/typson" });                  
                 docson.templateBaseUrl="/docson/templates";
-                require(["typson-schema"], function(schema) {
+                require(["lib/typson-schema"], function(schema) {
                     schema.definitions(event.data).done(function(defs) {
                         var firstKey = Object.keys(defs)[0];
                         var doc = $("#doc");
